[gd_scene load_steps=2 format=3 uid="uid://scorescreen001"]

[ext_resource type="Script" path="res://ScoreScreen.gd" id="1"]

[node name="ScoreScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "RESULTS"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="RankLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Rank: A"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Score: 0"
horizontal_alignment = 1

[node name="Spacer3" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="AccuracyLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Accuracy: 0.0%"
horizontal_alignment = 1

[node name="Spacer4" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="NotesHitLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Notes Hit: 0 / 0"
horizontal_alignment = 1

[node name="Spacer5" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="ComboLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Max Combo: 0"
horizontal_alignment = 1

[node name="Spacer6" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RetryButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Retry"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="MenuButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Main Menu"
